Version 8.8.8 * repositioning of price panel on product details page to prevent wording cut off

--- a/RapidtradeHTML5/public_html/Rapidtrade.css
+++ b/RapidtradeHTML5/public_html/Rapidtrade.css
@@ -71,7 +71,7 @@
 .panel-grey-rounded {
     -moz-border-radius: 8px; 
     -webkit-border-radius: 8px; 
-	padding: 5px 10px 5px 10px;
+	padding: 5px 10px 5px 20px;
 	border: thin solid #e7e7e7;
 	background-color: #f5f5f5;
    
@@ -79,7 +79,7 @@
 
 .panel-white-rounded {
 	border: thin solid #e7e7e7;
-	padding: 10px;
+	padding: 15px;
     -moz-border-radius: 8px; 
     -webkit-border-radius: 8px; 
     border-radius: 8px; 
